full-moon/tests/cases/fail/tokenizer/unclosed-comment-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/tokenizer/unclosed-comment-1
---
error[tokenizer]: unclosed comment (1:1 to 1:5)
  ┌─ source.lua:1:1
  │
1 │ --[[
  │ ^^^^


